--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@angular/compiler": "^15.1.2",
     "@angular/core": "^15.1.2",
     "@angular/forms": "^15.1.2",
+    "@angular/google-maps": "^15.1.2",
     "@angular/platform-browser": "^15.1.2",
     "@angular/platform-browser-dynamic": "^15.1.2",
     "@angular/router": "^15.1.2",
-    "@types/google.maps": "^3.51.0",
+    "@googlemaps/google-maps-services-js": "^3.3.26",
     "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-mask": "^13.0.0",
     "rxjs": "~7.5.0",
